--- a/style.css
+++ b/style.css
@@ -26,15 +26,17 @@ body {
 
 .container {
   background-color: antiquewhite;
-  background-image: url('./img/background.jpg');
-  background-size: cover;
   width: var(--contaier-width);
   height: var(--container-height);
+
   position: relative;
   overflow: hidden;
 }
 header {
   width: 100%;
+  height: var(--header-height);
+  background-image: url('./img/background.jpg');
+  background-size: cover;
   border-radius: 5px 5px 0 0;
 }
 .header {
@@ -45,16 +47,16 @@ header {
   justify-content: center;
   color: #fff;
 }
-.addNewEvent {
+.new-todo {
   width: 100%;
   height: 50px;
-  padding: 0.5rem 0;
+  padding: 0.25rem 0;
 }
-.addNewEvent form {
+.new-todo form {
   display: flex;
   align-items: center;
 }
-.addNewEvent form input {
+.new-todo form input {
   flex: 1;
   height: 40px;
   background-color: transparent;
@@ -65,7 +67,7 @@ header {
   font-size: 1rem;
   color: #fff;
 }
-.addNewEvent form button {
+.new-todo form button {
   width: 60px;
   height: 40px;
   font-size: 1rem;
@@ -75,37 +77,36 @@ header {
   border-left: 0px;
   cursor: pointer;
 }
-.addNewEvent form button:hover {
+.new-todo form button:hover {
   text-shadow: 1px 1px 20px rgba(0, 0, 0, 0.8);
 }
 
-.todoList {
+#todos-list {
   height: calc(var(--container-height) - var(--header-height));
-  /* background-color: #fff; */
-  background-color: transparent;
+  background-color: #fff;
   padding: 0.5rem;
   border: 1px solid rgb(219, 219, 219);
   overflow: scroll;
   border-radius: 0 0 5px 5px;
 }
 
-.todoList .todoTask {
+#todos-list .todo {
   display: flex;
   align-items: center;
   padding: 0.75rem 0.5rem;
   border-radius: 5px;
 }
-.todoList .todoTask:hover {
+#todos-list .todo:hover {
   background-color: rgba(0, 0, 0, 0.1);
 }
-.todoList .todoTask * {
+#todos-list .todo * {
   cursor: pointer;
   margin-right: 0.5rem;
 }
-.todoList .todoTask i {
+#todos-list .todo i {
   font-size: 0.9rem;
 }
-.todoList .todoTask p {
+#todos-list .todo p {
   flex: 1;
   word-break: break-all;
 }
@@ -113,10 +114,10 @@ header {
   text-decoration: line-through;
   color: grey;
 }
-.todoList .todoTask .bi-pencil-square {
+#todos-list .todo .bi-pencil-square {
   color: rgb(31, 177, 48);
 }
-.todoList .todoTask .bi-x-circle {
+#todos-list .todo .bi-trash {
   color: rgb(236, 82, 82);
   margin: 0;
 }
