--- a/styles.css
+++ b/styles.css
@@ -7,20 +7,19 @@ body {
     width: 100vw;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
-  
-.container {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    background-color: antiquewhite;
-    width: var(--contaier-width);
-    height: var(--container-height);
     background-image: url('./background.jpg');
     background-size: cover;
-    opacity: 0.5;
+}
+  
+.container {
+    padding: 20px;
+    background-color: rgb(255, 255, 255, 0.5); 
+    width: var(--contaier-width);
+    height: auto;
+    border-radius: 10px;
 }
 
 h2 {
@@ -28,8 +27,7 @@ h2 {
     
 }
 .new-todo {
-    flex: 1;
-    height: 50px;
+    height: 40px;
     margin: 10px;
 }
 
@@ -57,7 +55,7 @@ h2 {
     height: 40px;
     font-size: 1rem;
     background-color: transparent;
-    color: rgb(255, 247, 0);
+    color: rgb(0, 157, 255);
     border: none;
     border-left: 0px;
     cursor: pointer;
@@ -67,39 +65,51 @@ h2 {
 #todo-list {
     flex: 1;
     height: calc(var(--container-height) - var(--header-height));
-    background-color: rgb(195, 43, 43, 0.5); 
     padding: 0.5rem;
     overflow: scroll;
     border-radius: 15px;
   }
   
-#todo-list .todo-item {
+.todo-item {
     display: flex;
     align-items: center;
     padding: 0.5rem 0.5rem;
     border-radius: 5px;
 }
-#todo-list .todo-item:hover {
+.todo-item:hover {
     background-color: rgba(0, 0, 0, 0.1);
 }
-#todo-list .todo-item * {
+.todo-item * {
     cursor: pointer;
-    margin-right: 0.5rem;
+    display: flex;
 }
-#todo-list .todo-item i {
-    font-size: 0.9rem;
+.todo-item i {
+   margin-right: 10px;
 }
+
 
 .todo-input {
+    flex-grow: 3;
     border-radius: 5px;
-    background-color: red;
-    height: 20px;
-}
-
-.edit-button {
-    font-weight: bolder;
+    background-color: rgba(0, 162, 255, 0.588);
+    height: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-left: 10px;
+    font-size: 1rem;
+    color: white;
     
 }
 
+.edit-button {
+    color: white;
+}
+
+
+.delete-button {
+    font-weight: bolder;
+    border-radius: 3px;
+    color: #fff;
+}
 
 
